force-app/main/default/objects/echosign_dev1__Agreement_Update_Settings__c/echosign_dev1__Agreement_Update_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings category related to update of an agreement</description>
    <label>Adobe Sign Agreement Update Settings</label>
</CustomObject>