force-app/main/default/objects/echosign_dev1__Agreement_Update_Settings__c/fields/echosign_dev1__Add_Audit_Report__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Add_Audit_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable this setting to attach audit report PDF to the agreement record after agreement transaction is completed.</description>
    <inlineHelpText>Enable this setting to attach audit report PDF to the agreement record after agreement transaction is completed.</inlineHelpText>
    <label>Add Audit Report</label>
    <type>Checkbox</type>
</CustomField>