force-app/main/default/objects/echosign_dev1__Agreement_Update_Settings__c/fields/echosign_dev1__Add_Signed_PDF__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Add_Signed_PDF__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable this setting to add latest PDF to an agreement record whenever an agreement is signed / approved / accepted / filled / delivered by the participant.</description>
    <inlineHelpText>Enable this setting to add latest PDF to an agreement record whenever an agreement is signed / approved / accepted / filled / delivered by the participant.</inlineHelpText>
    <label>Add Signed PDF</label>
    <type>Checkbox</type>
</CustomField>