force-app/main/default/objects/echosign_dev1__Agreement_Update_Settings__c/fields/echosign_dev1__Add_Signed_PDF_as_Separate_Attachments__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Add_Signed_PDF_as_Separate_Attachments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable this setting to attach final agreement copy as separate PDFs for each document to the agreement record when agreement transaction is completed.</description>
    <inlineHelpText>Enable this setting to attach final agreement copy as separate PDFs for each document to the agreement record when agreement transaction is completed.</inlineHelpText>
    <label>Add Signed PDF as Separate Attachments</label>
    <type>Checkbox</type>
</CustomField>