force-app/main/default/objects/echosign_dev1__Agreement_Update_Settings__c/fields/echosign_dev1__Add_Signed_PDF_Url__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Add_Signed_PDF_Url__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable this setting to add an URL link for signed PDF to the Agreement record.</description>
    <inlineHelpText>Enable this setting to add an URL link for signed PDF to the Agreement record.</inlineHelpText>
    <label>Add Signed PDF Url</label>
    <type>Checkbox</type>
</CustomField>