force-app/main/default/objects/echosign_dev1__Agreement_Update_Settings__c/fields/echosign_dev1__Add_Supporting_Files__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Add_Supporting_Files__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable this setting to attach PDF of each supporting document uploaded by participants to the agreement record after agreement transaction is completed.</description>
    <inlineHelpText>Enable this setting to attach PDF of each supporting document uploaded by participants to the agreement record after agreement transaction is completed.</inlineHelpText>
    <label>Add Supporting Files</label>
    <type>Checkbox</type>
</CustomField>