force-app/main/default/objects/echosign_dev1__Agreement_Update_Settings__c/fields/echosign_dev1__Hide_Intermediate_Documents__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Hide_Intermediate_Documents__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable this setting to stop attaching intermediate signed documents.</description>
    <inlineHelpText>Enable this setting to stop attaching intermediate signed documents.</inlineHelpText>
    <label>Hide Intermediate Documents</label>
    <type>Checkbox</type>
</CustomField>