force-app/main/default/objects/echosign_dev1__Agreement_Update_Settings__c/fields/echosign_dev1__Show_Images__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Show_Images__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable this setting to show latest images of all pages of all the documents associated with an agreement.</description>
    <inlineHelpText>Enable this setting to show latest images of all pages of all the documents associated with an agreement.</inlineHelpText>
    <label>Show Images</label>
    <type>Checkbox</type>
</CustomField>