force-app/main/default/objects/echosign_dev1__Agreement_Update_Settings__c/fields/echosign_dev1__Update_Agreement_Events__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Update_Agreement_Events__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable this setting to update events of an agreement</description>
    <inlineHelpText>Enable this setting to update events of an agreement</inlineHelpText>
    <label>Update Agreement Events</label>
    <type>Checkbox</type>
</CustomField>