force-app/main/default/objects/echosign_dev1__Agreement_Update_Settings__c/fields/echosign_dev1__Update_Agreement_Status__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Update_Agreement_Status__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable this setting to update the status of an agreement. Disabling this setting will disable certain updates on the agreement record</description>
    <inlineHelpText>Enable this setting to update the status of an agreement. Disabling this setting will disable certain updates on the agreement record</inlineHelpText>
    <label>Update Agreement Status</label>
    <type>Checkbox</type>
</CustomField>